# src/main/java/com/spring/demospring/controller/UserApiController.java
@@ -1,30 +1,56 @@
 package com.spring.demospring.controller;
 
+import javax.annotation.Generated;
+import javax.transaction.Transactional;
+import javax.validation.Valid;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.context.request.NativeWebRequest;
 
 import com.spring.demospring.api.UserApi;
-
-import java.util.Optional;
-import javax.annotation.Generated;
+import com.spring.demospring.dto.ResponseModel;
+import com.spring.demospring.dto.UserModel;
+import com.spring.demospring.service.exception.UserException;
+import com.spring.demospring.service.user.UserService;
 
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-02-19T18:02:28.634+01:00[Europe/Berlin]")
 @Controller
 @RequestMapping("${openapi.swaggerDemoSpring.base-path:}")
 public class UserApiController implements UserApi {
 
-    private final NativeWebRequest request;
+	@Autowired
+	UserService userService;
 
-    @Autowired
-    public UserApiController(NativeWebRequest request) {
-        this.request = request;
-    }
+	@Override
+	public ResponseEntity<UserModel> getUserById(Long id) {
+		UserModel user = userService.getUserById(id);
+		return new ResponseEntity<UserModel>(user, HttpStatus.OK);
+	}
 
-    @Override
-    public Optional<NativeWebRequest> getRequest() {
-        return Optional.ofNullable(request);
-    }
+	@Override
+	@Transactional
+	public ResponseEntity<ResponseModel> createUser(@Valid UserModel user) {
+		ResponseModel resp = null;
+		resp = userService.createUser(user);
+		return new ResponseEntity<ResponseModel>(resp, HttpStatus.OK);
+	}
+
+	@Override
+	public ResponseEntity<ResponseModel> deleteUser(Long id) {
+		ResponseModel resp = null;
+		resp = userService.deleteUser(id);
+		return new ResponseEntity<ResponseModel>(resp, HttpStatus.OK);
+	}
+
+	@Override
+
+	public ResponseEntity<ResponseModel> updateUser(Long id, @Valid UserModel user) {
+		ResponseModel resp = null;
+		resp = userService.updateUser(id, user);
+		return new ResponseEntity<ResponseModel>(resp, HttpStatus.OK);
+	}
 
 }
